# Voila

./: Cargo.toml  README.md  db
public/: takoyaki.css
src/: main.rs
src/admin/: category.rs  comment.rs  dashboard.rs  mod.rs  post.rs
src/db/: category.rs  comment.rs  database.rs  mod.rs  post.rs  user.rs
src/form/: category.rs  comment.rs  mod.rs  post.rs
src/home/: homepage.rs
src/session/: admin.rs  mod.rs  session.rs
src/user/: user.rs
templates/: base.html.tera  layout.html.tera
templates/admin/: edit.html.tera  layout.html.tera  list.html.tera  login.html.tera  new.html.tera
templates/admin/category/: edit.html.tera  list.html.tera  new.html.tera
templates/admin/comment/: list.html.tera
templates/admin/dashboard/: index.html.tera
templates/homepage/: index.html.tera  layout.html.tera  post.html.tera
templates/utils/: modal.html.tera
