[package]
name = "blog"
version = "0.1.0"
authors = ["Choppy Thing <choppy.thing@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
mysql = "16.1.0"
chrono = { version = "0.4.9", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bcrypt = "0.6.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates", "serve"]
